# anispaceee.github.io

./: .env.example  .gitignore  AGENTS.md  CODE_WIKI.md  README.md  bundle-worker.js  check_css.cjs  check_deploy.cjs  check_error.cjs  check_extends.cjs  check_gh.cjs  check_html.cjs  check_js.cjs  check_layout.cjs  design-preview.html  eslint.config.js  index.html  oauth.config.js  package-lock.json  package.json  preview-musashi-redesign.html  test_prod.py  test_prod2.py  test_theme.py  todo.md  vite-plugin-oauth.js  vite.config.js  vitest.config.js
.github/workflows/: deploy.yml
docs/: API_INTEGRATION.md  AUDIT_REPORT.md  AUDIT_REPORT_ANIMEKO.md  BANGUMI_SEARCH_OPS.md  PRD-Musashi-V2.md  PRD-Musashi.md  PRD-Video-V2.md  PRD.md  PRD_Super.md  PRODUCT_STRATEGY.md  REPAIR_PLAN.md  TODO.md  hikarinagi-ui-analysis.md
docs/new_ideas/: anibt-integration.md  app-store-design.md  competitor-analysis.md  guest-access-design.md
public/: 404.html
scripts/: crawl-bangumi.js  import-bangumi-data.mjs
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/torrent/: engine.rs  mod.rs
src/context/: AppContext.jsx  MusicContext.jsx  WindowManager.jsx
src/data/: mockData.js
src/lib/: BehaviorCollector.js  SessionProfile.js
src/pages/: ExplorePage.css  ExplorePage.jsx  HomePage.css  HomePage.jsx  OAuthCallback.css  OAuthCallback.jsx
src/services/: AniListService.js  BangumiDataService.js  (+11 more)
tests/: personas.test.js
worker/: add-tables.sql  drop-all.sql  oauth-proxy-bundled.js  oauth-proxy.js  schema.sql  wrangler.toml
(+297 files in other folders)
